# optasoccer

./: LICENSE  README.md  pyproject.toml
optasoccer/: __init__.py  metadata.py  parser.py
